# perennial

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.test  README.md  _CoqExt  _CoqProject  _CoqProject.in  _RocqProject  coq-perennial.opam  flake.nix  get  go.mod  go.sum  go.work  go.work.sum  libname  mkvok  new-goose.opam  notes.md  perennial-old.opam  perennial.opam  pyproject.toml  release.sh  test-normalizer.sed
.github/: commit-emails.toml  dependabot.yml  mailbot.json
.github/workflows/: build.yml  ci.yml  dependabot-automerge.yml  goose.yml  mailbot.yml  nix.yml  opam-update.yml  update-tested.yml  upstream.yml
artifact/: .gitignore  EXPERIMENTS.md  LICENSE  Makefile  README.md  prepare.sh  styles.css  user-list
artifact/paper-scripts/: cmail.data  cmail_loc.py  get-data.sh  gomail.data  loc.py  mailboat.data  mailboat.plot
artifact/vm/: .gitignore  README.md  ubuntu-desktop.json
database/: .gitignore  Extract.v  README.md  fiximports.py  package.yaml  stack.yaml
database/bench/: BenchHelpers.hs  Main.hs
database/db-bench/: Main.hs
database/extraction-bench/: Main.hs
database/src/: DataOps.hs  FilesysOps.hs  Interpreter.hs  Lib.hs  SimpleDatabase.hs
database/test/: DataStructureSpec.hs  FilesysTests.hs  FilesystemsSpec.hs  LibSpec.hs  MemFilesysSpec.hs  SimpleDbConcurrentSpec.hs  SimpleDbSpec.hs  SimpleDbTesting.hs
docs/: opam.md  style_guide.md
etc/: Cargo.toml  admitter.py  ci-goose-check.py  ci-goose-check.sh  ci-grackle-check.py  coqc.py  disable-qed.sh  get-deps.py  get-unused.sh  install.sh  int_template.py  mkvok  notation_gen_spec.py  package-sources.sh  release.sh  requirements.txt  rocqc.py  semantics-coverage.py  split-repo.fish  test.v  test_coqc.py  timing-report.py  trace-deps.py  update-goose-new.py  update-goose.py  update-grackle.sh  word_template.py
etc/ci-use-goose-pr/: go.mod  go.sum  main.go
etc/mixcode/: README.md  mixcode.el
etc/popl21-supplement/: Makefile  README.md  prepare.sh
etc/test_coqc/: Abstract.v  Abstract.v.out  infinite.v  infinite.v.out  test.v  test.v.out
goose/: .gitignore  .golangci.yml  LICENSE  Makefile  README.md  errors.go  examples_test.go  goose.go  idents.go  interface.go  ops.go  types.go
goose/declfilter/: declfilter.go  test_test.go
goose/deptracker/: deptracker.go
goose/glang/: coq.go  coq_test.go  types.go
goose/go_test/: go_test.go
goose/proofgen/: proofgen.go  types.go
goose/proofsetup/: README.md  proofsetup.go  proofsetup_test.go  wp.go
goose/util/: types.go  util.go  util_test.go
logging-client/: .gitignore  Extract.v  README.md  demo.sh  fiximports.py  package.yaml  stack.yaml
logging-client/app/: Main.hs
logging-client/src/: Main.hs
logging-client/test/: LogEncodingSpec.hs
new/: atomic_fupd.v  disk_prelude.v  ghost.v  grove_prelude.v  should_build.v
new/code/: bytes.v  bytes.v.toml  cmp.v  context.v  context.v.toml  errors.v  errors.v.toml  etcdclient.v  fmt.v  fmt.v.toml  io.v  io.v.toml  log.v  log.v.toml  math.v  math.v.toml  os.v  os.v.toml  runtime.v  runtime.v.toml  slices.v  slices.v.toml  sort.v  sort.v.toml  strconv.v  strings.v  strings.v.toml  sync.v  sync.v.toml  testing.v  testing.v.toml  time.v  time.v.toml  unsafe.v  x.v
new/etc/: update-goose-new.py  update-grackle-new.sh
new/experiments/: a.v  all_scmra.v  all_ucmra.v  chan.v  checker.v  congruence_test.v  congruence_test__nobuild.v  gencongruence.py  ghost_map.v  ghost_var.v  glob.v  inG.v  interpreter_test.v  lang.v  own.v  records.v  saved_prop.v  set_solver_using.v  store.v  store__nobuild.v  token.v  type__nobuild.v  unsound.v
new/generatedproof/: bytes.v  cmp.v  context.v  errors.v  etcdclient.v  fmt.v  io.v  log.v  math.v  os.v  runtime.v  slices.v  sort.v  strconv.v  strings.v  sync.v  testing.v  time.v  unsafe.v  x.v
new/ghost/: all.v  auth_set.v  dghost_var.v  frac_auth.v  ghost_map.v  ghost_var.v  mono_list.v  mono_nat.v  own.v  saved_prop.v  token.v
new/golang/: README.md  defn.v  theory.v
new/manualproof/: sync.v
new/program_proof/: asyncfile.v  grove_ffi.v  grove_prelude.v  machine.v  marshal_stateless_proof.v  proof_prelude.v  std.v  sync.v
new/proof/: IRIS_PROOF_MODE.md  PERENNIAL_PROOF_REFERENCE.md  PERENNIAL_PROOF_TUTORIAL.md  append_log.v  asyncfile.v  bytes.v  chan.v  chan.v.old  cmp.v  context.v  disk_ffi.v  disk_prelude.v  errors.v  etcdclient.v  etcdraft.v  fmt.v  globals_test.v  grove_ffi.v  grove_prelude.v  inG_problem.v  io.v  kv.v  lock.v  log.v  machine.v  marshal.v  marshal_stateless_proof.v  math.v  own_crash.v  primitive.v  proof_prelude.v  proofmode.v  runtime.v  slices.v  sort.v  std.v  strings.v  sync.v  sync2.v  time.v  (+3 more)
new/trusted_code/: fmt.v  log.v  runtime.v  sync.v  time.v
new_code_axioms/: bytes.v  context.v  errors.v  fmt.v  io.v  log.v  math.v  os.v  slices.v  sort.v  strconv.v  strings.v  testing.v  time.v
new_code_axioms/crypto/: rand.v
new_code_axioms/google_golang_org/: grpc.v
new_code_axioms/math/: big.v  rand.v
new_partial_axioms/: fmt.v  log.v
new_trusted_code/: fmt.v  log.v  sync.v
nix/patches/: install-all.patch
replicated-disk/: .dir-locals.el  .gitignore  Extract.v  README.md  fiximports.py  package.yaml  stack.yaml
replicated-disk/src/: Interpreter.hs  ReplicatedDisk.hs  TwoDiskEnvironment.hs
replicated-disk/test/: .dir-locals.el  ReplicatedDiskSpec.hs  TwoDiskEnvironmentSpec.hs
scripts/: add-preprocess.sh
src/: .dir-locals.el  Lib.v  LiteBuild.v  POCS.v  ShouldBuild.v  TypedLib.v  base.v  diaframe_test.v
src/CSL/: Adequacy.v  BigDynOp.v  Count_Double_Heap.v  Count_GHeap.v  Count_Ghost.v  Count_Heap.v  Count_Typed_Heap.v  Counting.v  Crash.v  Leased_Heap.v  Lifting.v  NamedDestruct.v  ProofModeClasses.v  Refinement.v  RefinementAdequacy.v  RefinementIdempotenceFunModule.v  RefinementIdempotenceModule.v  ThreadReg.v  WeakestPre.v
src/Database/: Base.v  (+14 more)
tests/: .coqdeps.d  frac_auth_own.v  golang_auto.ref  golang_auto.v  golang_notation.ref  golang_notation.v  ipersist.ref  ipersist.v
trusted/: fmt.v  log.v  sync.v
(+2811 files in other folders)
