opam-version: "2.0"
maintainer: "Perennial Project"
authors: "Perennial Project"
license: "MIT"
homepage: "https://github.com/mit-pdos/perennial"
bug-reports: "https://github.com/mit-pdos/perennial/issues"
dev-repo: "git+https://github.com/mit-pdos/perennial.git"

synopsis: "Perennial is a system for verifying correctness for systems with both concurrency and crash-safety requirements, including recovery procedures"

depends: [
  "coq" { (>= "8.13.0" & < "8.14~") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: []
