opam-version: "2.0"
maintainer: "Tej Chajed <chajed@wisc.edu>"
authors: "The Perennial Team"
license: "MIT"
homepage: "https://github.com/mit-pdos/perennial"
bug-reports: "https://github.com/mit-pdos/perennial/issues"
dev-repo: "git+https://github.com/mit-pdos/perennial.git"
version: "dev"

synopsis: "A framework for verifying concurrent, crash-safe, distributed systems written in Go"
description: """
Perennial is a framework for verifying the correctness of systems programs. It
supports concurrency, crash-consistency proofs, and distributed systems.
Perennial works together with Goose to be powerful infrastructure for verifying
Go programs. It is built on top of the Iris separation logic.
"""
tags: [
  "logpath:Perennial"
  "logpath:New"
]

depends: [
  "rocq-runtime" { (>= "9.1" & < "9.2~") | (= "dev") }
  "rocq-stdlib"
  "coq-coqutil"
  "coq-record-update"
  "rocq-stdpp"
  "rocq-iris"
  "iris-named-props"
]

pin-depends: [
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#99f8ed46a2c3b3f6923ba8422b772d1b272f2b64"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#fb31f005eba0df4472f74dca5d9536da98a54aeb"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#142130afbf4ddf8768d59d3bb484c6c205301fdc"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#ca663d2709888a789a03edc861b7bde86ddd56e5"]
]

build: [make "new-goose" "-j%{jobs}%"]
install: ["./etc/install.sh" "new-goose"]
