opam-version: "2.0"
maintainer: "Tej Chajed <chajed@wisc.edu>"
authors: "The Perennial Team"
license: "MIT"
homepage: "https://github.com/mit-pdos/perennial"
bug-reports: "https://github.com/mit-pdos/perennial/issues"
dev-repo: "git+https://github.com/mit-pdos/perennial.git"
version: "dev"

synopsis: "A framework for verifying concurrent, crash-safe, distributed systems written in Go"
description: """
Perennial is a framework for verifying the correctness of systems programs. It
supports concurrency, crash-consistency proofs, and distributed systems.
Perennial works together with Goose to be powerful infrastructure for verifying
Go programs. It is built on top of the Iris separation logic.
"""
tags: [
  "logpath:Perennial"
  "logpath:New"
]

depends: [
  "rocq-runtime" { (>= "9.1" & < "9.3~") | (= "dev") }
  "rocq-stdlib"
  "coq-coqutil"
  "coq-record-update"
  "rocq-stdpp"
  "rocq-iris"
  "iris-named-props"
]

pin-depends: [
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#3a7e54b90bbe2d0e37063d69bce701fec6317ab9"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#1dd231db87451479043a3812dbdbd9658657ff7c"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#5e98bfddc9551191b1307d0998c8b85f63e3948a"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#2dc15278b33e54206d7933ed6ad2ece01fe8bf23"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#ca663d2709888a789a03edc861b7bde86ddd56e5"]
]

build: [make "new-goose" "-j%{jobs}%"]
install: ["./etc/install.sh" "new-goose"]
